# colortheme

./: .pre-commit-config.yaml  .pre-commit-seed.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
colortheme/: eventchecker.py  filemanager.py  main.py  path.py  starter.py  thememanager.py
colortheme/assets/kde_script_templates/: getWallpaper.js
src/colortheme/assets/kde_script_templates/: setStartIcon.js  setWallpaper.js
src/colortheme/assets/script_templates/: getStartIcon.js
src/colortheme/cli/: entry_point.py
src/colortheme/context/: context.py  options.py
src/colortheme/main/: eventchecker.py  main.py  sun_hours.py  thememanager.py
src/colortheme/models/: __init__.py  action.py  options.py  path.py
tests/: test_cli_entry_point.py  test_main.py
