[project]
name = "colortheme"
version = "0.1.1"
description = "Automate color theme configuration based on time of the day"
authors = [{name = "Quinten Roets", email = "qdr2104@columbia.edu"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astral >=3.2, <4",
    "backupmaster >=1.2.10, <2",
    "geocoder >=1.38.1, <2",
]

[project.optional-dependencies]
dev = [
    "package-dev-tools >=0.7.1, <1",
    "package-dev-utils >=0.1.6, <1",
]

[project.urls]
"Source Code" = "https://github.com/quintenroets/colortheme"

[project.scripts]
colortheme = "colortheme.cli:entry_point"
restartplasma = "colortheme.cli.entry_point:restart_plasma"
light = "colortheme.cli.entry_point:go_light"
dark = "colortheme.cli.entry_point:go_dark"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
command_line = "-m pytest tests"

[tool.coverage.report]
precision = 4
fail_under = 100

[tool.mypy]
strict = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = [
    "geocoder.*",
    "gui.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "src", ".",
]

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401",   # annotated with Any
    "D",        # docstrings
    "G004",     # logging f-string
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]  # assert used

[tool.setuptools.package-data]
colortheme = ["py.typed", "assets/**"]
